# FamilyTree

./: .gitignore  README.md  pyproject.toml
familly_tree/: .flake8  .gitignore  README.md  TODOS.md  manage.py  pyproject.toml  pytest.ini
familly_tree/familly_tree/: asgi.py  settings.py  urls.py  wsgi.py
familly_tree/family_tree/: asgi.py  settings.py  urls.py  wsgi.py
familly_tree/members/: admin.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
familly_tree/members/migrations/: 0001_initial.py  0002_member_birth_date_member_children_num.py  0003_member_death_date_member_family_lastname_and_more.py  0004_alter_member_birth_date_alter_member_children_num_and_more.py  0005_remove_member_children_num_and_more.py  0006_remove_member_is_alive.py  0007_rename_family_lastname_member_family_name.py  0008_alter_member_birth_date_alter_member_death_date.py  0009_member_description.py  0010_remove_member_father_id_remove_member_mother_id_and_more.py  0011_martialrelationship.py  0012_member_cached_age.py
familly_tree/members/static/: styles.css
familly_tree/members/templates/: 404.html  add_button.html  add_new_member.html  all_members.html  choose_child.html  delete_button.html  details.html  edit_button.html  edit_member.html  filter.html  main.html  marry_member_form.html  master.html  member_marriages.html  tree.html
familly_tree/members/templatetags/: family_tree_tags.py
familly_tree/members/tests/: factories.py  test_filters.py  test_martial_relationships.py  test_members.py  test_spouse_relationship.py  (+3 more)
familly_tree/staticfiles/: styles.css
