[tool.poetry]
name = "famillytree"
version = "0.1.0"
description = ""
authors = ["arturgorski14 <arturgorski14@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.2"
pytest = "^8.3.3"
pytest-django = "^4.9.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
pytest = "^8.3.3"
pytest-django = "^4.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
